--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -186,4 +186,6 @@
     <string name="user_detail_followed">フォローされています</string>
     <string name="user_detail_not_followed">フォローされていません</string>
     <string name="user_detail_loading">Loading</string>
+    <string name="user_detail_tab_info">Info</string>
+    <string name="user_detail_tab_timeline">Timeline</string>
 </resources>
