Implement status menu header commands

--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -188,4 +188,6 @@
     <string name="user_detail_loading">読み込み中</string>
     <string name="user_detail_tab_info">Info</string>
     <string name="user_detail_tab_timeline">Timeline</string>
+    <string name="notice_unfavorite_succeeded">お気に入りを削除しました</string>
+    <string name="notice_unfavorite_failed">お気に入りの削除に失敗しました</string>
 </resources>
