--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -190,4 +190,5 @@
     <string name="user_detail_tab_timeline">Timeline</string>
     <string name="notice_unfavorite_succeeded">お気に入りを削除しました</string>
     <string name="notice_unfavorite_failed">お気に入りの削除に失敗しました</string>
+    <string name="command_post_morse">モールスに変換</string>
 </resources>
