--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -190,4 +190,5 @@
     <string name="user_detail_tab_timeline">Timeline</string>
     <string name="notice_unfavorite_succeeded">Succeeded to unfavorite</string>
     <string name="notice_unfavorite_failed">Failed to unfavorite</string>
+    <string name="command_post_morse">Parse to morse</string>
 </resources>
