--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -191,4 +191,5 @@
     <string name="notice_unfavorite_succeeded">Succeeded to unfavorite</string>
     <string name="notice_unfavorite_failed">Failed to unfavorite</string>
     <string name="command_post_morse">Parse to morse</string>
+    <string name="command_open_template_list">Insert Templates</string>
 </resources>
