Delete some preferences (they aren't changed usually) and change some localizations

--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -69,11 +69,13 @@
     <string name="setting_namestyle_dialog_title">名前の形式を選択</string>
     <string name="setting_read_morse">モールスの解読</string>
     <string name="setting_category_system_title">システム設定</string>
-    <string name="setting_show_confirm_dialog">確認ダイアログを表示する</string>
-    <string name="setting_back_to_home_title">投稿後にホームに戻る</string>
-    <string name="setting_notify_on_unfavorited_title">あんふぁぼを通知する</string>
-    <string name="setting_search_includes_retweets">検索にリツイートを含める</string>
-    <string name="setting_timelines_title">タイムライン</string>
+    <string name="setting_safe_mode_title">セーフモード</string>
+    <string name="setting_safe_mode_summary_on">確認ダイアログを表示する</string>
+    <string name="setting_safe_mode_summary_off">確認ダイアログを表示しない</string>
+    <string name="setting_notify_on_unfavorited_title">あんふぁぼ通知</string>
+    <string name="setting_notify_on_unfavorited_summary_on">有効</string>
+    <string name="setting_notify_on_unfavorited_summary_off">無効</string>
+    <string name="setting_timelines_title">タイムライン取得件数</string>
     <string name="setting_timelines_summary_format">更新時に新しいツイートを%s件取得する</string>
     <string name="setting_timelines_dialog_title">取得件数の設定</string>
     <string name="setting_timelines_dialog_message">1から200の間で設定してください</string>
