--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -65,13 +65,15 @@
     <string name="setting_namestyle_dialog_title">Choose name style</string>
     <string name="setting_read_morse">Enable morse</string>
     <string name="setting_category_system_title">System Setting</string>
-    <string name="setting_show_confirm_dialog">Show confirm dialog</string>
-    <string name="setting_back_to_home_title">Back to Home after posting</string>
-    <string name="setting_notify_on_unfavorited_title">Notify on unfavorited</string>
-    <string name="setting_search_includes_retweets">Search includes retweets</string>
-    <string name="setting_timelines_title">Timelines</string>
+    <string name="setting_safe_mode_title">Safe mode</string>
+    <string name="setting_safe_mode_summary_on">Show confirm dialog</string>
+    <string name="setting_safe_mode_summary_off">No confirmation</string>
+    <string name="setting_notify_on_unfavorited_title">On unfavorited</string>
+    <string name="setting_notify_on_unfavorited_summary_on">Notify</string>
+    <string name="setting_notify_on_unfavorited_summary_off">No Notice</string>
+    <string name="setting_timelines_title">The number of timeline getting</string>
     <string name="setting_timelines_summary_format">Get new %s tweets by refresh</string>
-    <string name="setting_timelines_dialog_title">Edit count</string>
+    <string name="setting_timelines_dialog_title">Edit number</string>
     <string name="setting_timelines_dialog_message">Set a value between 1\-200</string>
     <string name="setting_category_about_title">About</string>
     <string name="setting_delete_authentication_title">Delete authentication</string>
