Implement check for activity starting

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -200,4 +200,5 @@
     <string name="dialog_title_select_image">Select image</string>
     <string name="notice_select_image_succeeded">Succeed to select image</string>
     <string name="notice_select_image_failed">Failed to select image</string>
+    <string name="notice_error_start_activity">Can\'t start any activity</string>
 </resources>
