--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -200,4 +200,5 @@
     <string name="dialog_title_select_image">画像を選択</string>
     <string name="notice_select_image_succeeded">画像を選択しました</string>
     <string name="notice_select_image_failed">画像の選択に失敗しました</string>
+    <string name="notice_error_start_activity">アクティビティを起動できませんでした</string>
 </resources>
