--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -201,4 +201,5 @@
     <string name="notice_select_image_succeeded">画像を選択しました</string>
     <string name="notice_select_image_failed">画像の選択に失敗しました</string>
     <string name="notice_error_start_activity">アクティビティを起動できませんでした</string>
+    <string name="notice_not_implemented_yet">まだ実装されてないです。ごめんね</string>
 </resources>
