Implement new command: Save text as new template

--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -202,4 +202,6 @@
     <string name="notice_select_image_failed">画像の選択に失敗しました</string>
     <string name="notice_error_start_activity">アクティビティを起動できませんでした</string>
     <string name="notice_not_implemented_yet">まだ実装されてないです。ごめんね</string>
+    <string name="command_save_as_template">定型文として保存</string>
+    <string name="notice_save_as_template">定型文を保存しました</string>
 </resources>
