--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -202,4 +202,6 @@
     <string name="notice_select_image_failed">Failed to select image</string>
     <string name="notice_error_start_activity">Can\'t start any activity</string>
     <string name="notice_not_implemented_yet">Sorry, this is not implemented yet.</string>
+    <string name="command_save_as_template">Save as template</string>
+    <string name="notice_save_as_template">New template is saved</string>
 </resources>
