--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -207,6 +207,8 @@
     <string name="notice_error_rate_limit">レートリミットを超えています</string>
     <string name="dialog_title_add_new_page">新しいタブを追加</string>
     <string name="command_create_search_page_dialog">検索タブ</string>
-    <string name="dialog_create_search_page">Input search query</string>
-    <string name="notice_error_search">Failed to search</string>
+    <string name="dialog_create_search_page">検索クエリを入力</string>
+    <string name="notice_error_search">検索に失敗しました</string>
+    <string name="actionbar_remove_page">ページを削除</string>
+    <string name="dialog_confirm_remove_page">Remove this page, OK?</string>
 </resources>
