--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -39,7 +39,7 @@
     <string name="page_name_mentions">Mentions</string>
     <string name="page_name_messages">Messages</string>
     <string name="page_name_history">History</string>
-    <string name="actionbar_add_page">Add page</string>
+    <string name="actionbar_search">Add page</string>
     <string name="actionbar_setting">Setting</string>
     <string name="actionbar_services">Web sites</string>
     <string name="actionbar_report">Report to author</string>
@@ -209,6 +209,7 @@
     <string name="command_create_search_page_dialog">Search page</string>
     <string name="dialog_create_search_page">Input search query</string>
     <string name="notice_error_search">Failed to search</string>
-    <string name="actionbar_remove_page">Remove page</string>
-    <string name="dialog_confirm_remove_page">Remove this page, OK?</string>
+    <string name="command_paste_to_post">Paste to post</string>
+    <string name="command_search_on_twitter">Search on Twitter</string>
+    <string name="page_name_search">Search</string>
 </resources>
