--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -212,4 +212,5 @@
     <string name="command_paste_to_post">投稿欄に貼り付け</string>
     <string name="command_search_on_twitter">Twitterで検索</string>
     <string name="page_name_search">検索</string>
+    <string name="notice_search_text_empty">クエリが空です</string>
 </resources>
