--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -212,4 +212,5 @@
     <string name="command_paste_to_post">Paste to post</string>
     <string name="command_search_on_twitter">Search on Twitter</string>
     <string name="page_name_search">Search</string>
+    <string name="notice_search_text_empty">Query is empty</string>
 </resources>
