--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -213,5 +213,5 @@
     <string name="command_search_on_twitter">Twitterで検索</string>
     <string name="page_name_search">検索</string>
     <string name="notice_search_text_empty">クエリが空です</string>
-    <string name="dialog_title_select_search_query">Select search query</string>
+    <string name="dialog_title_select_search_query">検索クエリを選択</string>
 </resources>
