--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -214,4 +214,5 @@
     <string name="page_name_search">Search</string>
     <string name="notice_search_text_empty">Query is empty</string>
     <string name="dialog_title_select_search_query">Select search query</string>
+    <string name="actionbar_post">Post</string>
 </resources>
