--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -215,4 +215,5 @@
     <string name="notice_search_text_empty">クエリが空です</string>
     <string name="dialog_title_select_search_query">検索クエリを選択</string>
     <string name="actionbar_post">Post</string>
+    <string name="dialog_confirm_commands">Execute, OK?</string>
 </resources>
