--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -216,4 +216,5 @@
     <string name="dialog_title_select_search_query">検索クエリを選択</string>
     <string name="actionbar_post">投稿</string>
     <string name="dialog_confirm_commands">実行しますか？</string>
+    <string name="notice_add_to_reply">返信に追加しました</string>
 </resources>
