--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -217,4 +217,5 @@
     <string name="actionbar_post">Post</string>
     <string name="dialog_confirm_commands">Execute, OK?</string>
     <string name="notice_add_to_reply">Added to reply</string>
+    <string name="notice_theme_changed">Theme will be enabled on next launch</string>
 </resources>
