--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -218,4 +218,6 @@
     <string name="dialog_confirm_commands">Execute, OK?</string>
     <string name="notice_add_to_reply">Added to reply</string>
     <string name="notice_theme_changed">Theme will be enabled on next launch</string>
+    <string name="dialog_confirm_clear_account">Clear authentication, Really?</string>
+    <string name="notice_cleared_account">Authentication was cleared. Please authorize on next launch</string>
 </resources>
