--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -226,4 +226,7 @@
     <string name="activity_licenses">Licenses</string>
     <string name="notice_copy_clipboard">Copied to clipboard</string>
     <string name="dialog_title_talk_chain">Talk View</string>
+    <string name="page_name_list">List</string>
+    <string name="notice_userlist_not_selected">No List is selected</string>
+    <string name="dialog_title_select_userlist">Select a list</string>
 </resources>
