--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -221,4 +221,6 @@
     <string name="page_name_list">リスト</string>
     <string name="notice_userlist_not_selected">リストが選択されていません</string>
     <string name="dialog_title_select_userlist">リストを選択</string>
+    <string name="command_status_add_to_ignore">以後このツイートを無視する</string>
+    <string name="notice_add_to_ignore">無視リストに追加しました</string>
 </resources>
