--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -146,7 +146,7 @@
     <string name="command_message_delete">削除</string>
     <string name="notice_message_delete_succeeded">削除しました</string>
     <string name="notice_message_delete_failed">削除に失敗しました</string>
-    <string name="command_user_send_message">ダイレクトメッセージ</string>
+    <string name="command_user_send_message">ダイレクトメッセージを送る</string>
     <string name="notice_message_send_succeeded">DMを送信しました</string>
     <string name="notice_message_send_failed">DMの送信に失敗しました</string>
     <string name="dialog_message_now_loading">読み込み中…</string>
@@ -225,4 +225,5 @@
     <string name="notice_add_to_ignore">無視リストに追加しました</string>
     <string name="error_intent_status_cannot_load">ツイートを取得できませんでした</string>
     <string name="intent_post">つぶやく</string>
+    <string name="post_button_send_message">メッセージを送信</string>
 </resources>
