--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -225,4 +225,7 @@
     <string name="notice_search_query_deleted">クエリを削除しました</string>
     <string name="notice_no_template_exists">定型文が存在しません</string>
     <string name="notice_no_query_exists">クエリが存在しません</string>
+    <string name="notice_tab_editted">タブ設定は次回起動時から有効になります</string>
+    <string name="activity_edit_tab">タブ表示設定</string>
+    <string name="actionbar_edit_tabs">タブ設定</string>
 </resources>
